// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toolbar default renders default toolbar 1`] = `
<div
  className="toolbar undefined"
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="DefaultToolbar-defaultToolbar-2"
  >
    <div
      className="DefaultToolbar-buttonsContainer-3"
    />
    <div
      ariaLabel="Done"
      className="RawDoneButton-iconRoot-1"
    />
  </div>
  <div
    className="shared"
  />
</div>
`;

exports[`toolbar renders custom toolbar 1`] = `
<div
  className="toolbar undefined"
  onClick={[Function]}
  style={Object {}}
>
  <div>
     --------- custom toolbar ----------- 
  </div>
  <div
    className="shared"
  >
    <div
      ariaLabel="Delete"
      className="iconRoot"
    />
    <div
      ariaLabel="Done"
      className="RawDoneButton-iconRoot-1"
    />
  </div>
</div>
`;
